# OBS-Multi-Instance-Controller

./: .gitignore  BUILD.md  CATALINA_BUILD.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  PYQT5_MIGRATION.md  README.md  SHIBOKEN_TROUBLESHOOTING.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-release.yml  test.yml
app/: __init__.py  __version__.py
app/config/: __init__.py  loader.py  models.py  obs_config.py
app/obs/: __init__.py  controller.py  websocket_manager.py
app/system/: __init__.py  obs_launcher.py  watchdog.py
app/ui/: __init__.py  main_window.py
app/ui/styles/: __init__.py  stylesheet.qss
app/ui/widgets/: __init__.py  court_control_widget.py
app/utils/: __init__.py  logging.py
scripts/: __init__.py  build.py  build_linux.py  build_macos.py  build_windows.py  hook-pyside6.py  pyinstaller.spec
tests/: __init__.py  test_config.py  test_obs_controller.py  test_watchdog.py
