[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sco-live"
version = "0.1.0"
description = "SCO LIVE - Live streaming control for squash courts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Squash Court Operations"}
]
keywords = ["obs", "squash", "streaming", "recording"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "PySide6>=6.8.0",
    "obsws-python>=1.6.0",
    "Pydantic>=2.8.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
sco-live = "main:main"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 100
